--- a/packages/langchain_firestore/pubspec.yaml
+++ b/packages/langchain_firestore/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  langchain: ^0.0.5
+  langchain: 
+    path: ../langchain
   meta: ^1.9.1
   cloud_firestore: ^4.8.4
   
