--- a/packages/langchain_openai/pubspec.yaml
+++ b/packages/langchain_openai/pubspec.yaml
@@ -12,7 +12,8 @@ environment:
 dependencies:
   collection: ^1.17.1
   dart_openai: ^4.0.0
-  langchain: ^0.0.5
+  langchain: 
+    path: ../langchain
   meta: ^1.9.1
   tiktoken: ^1.0.3
 
