--- a/packages/langchain_openai/pubspec.yaml
+++ b/packages/langchain_openai/pubspec.yaml
@@ -19,8 +19,7 @@ environment:
 dependencies:
   collection: ^1.17.1
   dart_openai: ^4.0.0
-  langchain:
-    path: ../langchain
+  langchain: ^0.0.13
   meta: ^1.9.1
   tiktoken: ^1.0.3
 
