--- a/packages/langchain_google/pubspec.yaml
+++ b/packages/langchain_google/pubspec.yaml
@@ -1,6 +1,6 @@
 name: langchain_google
 description: LangChain.dart integration module for Google (VertexAI, PaLM, Matching Engine, etc.).
-version: 0.2.2+1
+version: 0.2.3
 repository: https://github.com/davidmigloz/langchain_dart/tree/main/packages/langchain_google
 issue_tracker: https://github.com/davidmigloz/langchain_dart/issues
 homepage: https://github.com/davidmigloz/langchain_dart
@@ -17,20 +17,17 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  collection: '>=1.17.0 <1.19.0'
+  collection: ">=1.17.0 <1.19.0"
   gcloud: ^0.8.12
-  googleai_dart: ^0.0.2
+  googleai_dart: ^0.0.2+1
   googleapis: ^12.0.0
   googleapis_auth: ^1.4.1
   http: ^1.1.0
-  langchain: ^0.3.1+1
+  langchain: ^0.3.2
   langchain_tiktoken: ^1.0.1
   meta: ^1.9.1
   uuid: ^4.0.0
-  vertex_ai: ^0.0.7+2
-  cloud_firestore: ^4.9.3
-  fake_cloud_firestore: ^2.4.1+1
-  vertex_ai: ^0.0.7+2
+  vertex_ai: ^0.0.8
 
 dev_dependencies:
   test: ^1.21.0
